# sdl2_sketch

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  shapes.cpp  shapes.h
